src: editor.css: fix image alignment

--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -229,6 +229,7 @@ script-group-manager {
                                         & img {
                                             width: unset;
                                             height: unset;
+                                            position: relative;
                                         }
                                     }
 
